--- a/package.json
+++ b/package.json
@@ -50,7 +50,6 @@
     "@fullcalendar/timeline": "^5.6.0",
     "@hookform/resolvers": "1.3.5",
     "@icpswap/calls": "git+ssh://git@github.com:ICPSwap-Labs/ICPSwap-calls.git#1.1.14",
-    "@icpswap/nns": "git+ssh://git@github.com:ICPSwap-Labs/nns.git#1.0.0",
     "@icpswap/sdk": "git+ssh://git@github.com:ICPSwap-Labs/sdk.git#1.0.11",
     "@icpswap/wallet": "git+ssh://git@github.com:ICPSwap-Labs/wallet.git#1.0.0",
     "@mdx-js/react": "^1.6.22",
@@ -86,7 +85,6 @@
     "@types/testing-library__cypress": "^5.0.5",
     "@types/wcag-contrast": "^3.0.0",
     "ajv": "^6.12.3",
-    "apexcharts": "^3.26.1",
     "apollo-boost": "^0.4.9",
     "assert": "2.0.0",
     "axios": "^0.21.1",
@@ -106,14 +104,11 @@
     "colorthief": "^2.3.2",
     "copy-to-clipboard": "^3.2.0",
     "core-js": "2",
-    "countup.js": "^2.0.8",
     "crc": "^3.8.0",
     "cross-env": "^7.0.2",
     "crypto": "^1.0.1",
     "crypto-browserify": "^3.12.0",
     "crypto-js": "^4.0.0",
-    "cypress": "^4.11.0",
-    "d3": "7.0.0",
     "date-fns": "^2.21.1",
     "dayjs": "^1.10.5",
     "decimal.js": "^10.3.1",
@@ -130,7 +125,6 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "events": "3.3.0",
     "firebase": "^8.3.1",
-    "formik": "^2.2.6",
     "framer-motion": "^4.1.13",
     "git-format-staged": "^2.1.1",
     "google-protobuf": "^3.17.0",
@@ -159,7 +153,6 @@
     "prism-react-renderer": "^1.2.0",
     "prismjs": "^1.23.0",
     "process": "0.11.10",
-    "prop-types": "^15.7.2",
     "qrcode.react": "^1.0.1",
     "qs": "^6.9.4",
     "query-string": "^7.1.1",
@@ -170,15 +163,12 @@
     "react-compound-timer": "^1.2.0",
     "react-confetti": "^6.0.0",
     "react-copy-to-clipboard": "^5.0.3",
-    "react-countdown": "^2.3.2",
-    "react-countup": "^6.1.1",
     "react-device-detect": "^1.17.0",
     "react-dom": "^17.0.2",
     "react-draft-wysiwyg": "^1.14.6",
     "react-draggable": "^4.4.3",
     "react-feather": "^2.0.8",
     "react-file-reader": "^1.1.4",
-    "react-ga": "^2.5.7",
     "react-google-recaptcha": "^2.1.0",
     "react-helmet": "^6.1.0",
     "react-hook-form": "^6.15.5",
@@ -240,9 +230,7 @@
     "workbox-expiration": "^6.1.0",
     "workbox-precaching": "^6.1.0",
     "workbox-routing": "^6.1.0",
-    "workbox-strategies": "^6.1.0",
-    "xlsx": "^0.17.5",
-    "yup": "^0.32.9"
+    "workbox-strategies": "^6.1.0"
   },
   "browserslist": {
     "production": [
