--- a/package.json
+++ b/package.json
@@ -24,8 +24,7 @@
     "chalk": "^4.1.2",
     "customize-cra": "^1.0.0",
     "react-app-rewired": "^2.1.8",
-    "sass": "^1.32.11",
-    "shelljs": "^0.8.4"
+    "sass": "^1.32.11"
   },
   "dependencies": {
     "@apollo/react-hooks": "^4.0.0",
@@ -41,17 +40,6 @@
     "@emotion/react": "^11.8.1",
     "@emotion/style": "^0.8.0",
     "@emotion/styled": "^11.3.0",
-    "@formatjs/icu-messageformat-parser": "^0.2.1",
-    "@fullcalendar/daygrid": "^5.6.0",
-    "@fullcalendar/interaction": "^5.6.0",
-    "@fullcalendar/list": "^5.6.0",
-    "@fullcalendar/react": "^5.6.0",
-    "@fullcalendar/timegrid": "^5.6.0",
-    "@fullcalendar/timeline": "^5.6.0",
-    "@hookform/resolvers": "1.3.5",
-    "@icpswap/calls": "git+ssh://git@github.com:ICPSwap-Labs/ICPSwap-calls.git#1.1.14",
-    "@icpswap/sdk": "git+ssh://git@github.com:ICPSwap-Labs/sdk.git#1.0.11",
-    "@icpswap/wallet": "git+ssh://git@github.com:ICPSwap-Labs/wallet.git#1.0.0",
     "@mdx-js/react": "^1.6.22",
     "@mui/icons-material": "^5.4.2",
     "@mui/lab": "^5.0.0-alpha.70",
@@ -88,31 +76,18 @@
     "apollo-boost": "^0.4.9",
     "assert": "2.0.0",
     "axios": "^0.21.1",
-    "axios-mock-adapter": "^1.19.0",
     "base64-arraybuffer": "^0.2.0",
-    "big.js": "^5.2.2",
-    "bignumber.js": "^9.0.1",
-    "biguintle": "^1.0.3",
     "bip39": "^3.0.4",
     "buffer": "6.0.3",
     "buffer-pipe": "^0.0.5",
     "chance": "^1.1.7",
     "cids": "1.0.0",
-    "classnames": "^2.3.1",
-    "clipboard": "^2.0.8",
-    "clsx": "^1.1.1",
-    "colorthief": "^2.3.2",
-    "copy-to-clipboard": "^3.2.0",
     "core-js": "2",
     "crc": "^3.8.0",
     "cross-env": "^7.0.2",
     "crypto": "^1.0.1",
     "crypto-browserify": "^3.12.0",
-    "crypto-js": "^4.0.0",
-    "date-fns": "^2.21.1",
     "dayjs": "^1.10.5",
-    "decimal.js": "^10.3.1",
-    "decimal.js-light": "^2.5.0",
     "draft-js": "^0.11.7",
     "eslint": "^7.29.0",
     "eslint-config-airbnb": "^18.2.1",
@@ -134,7 +109,6 @@
     "isomorphic-fetch": "^3.0.0",
     "jazzicon": "^1.5.0",
     "js-sha256": "^0.9.0",
-    "jsbi": "^3.1.4",
     "jsonwebtoken": "^8.5.1",
     "jss-rtl": "^0.3.0",
     "jwt-decode": "^3.1.2",
@@ -153,13 +127,8 @@
     "prism-react-renderer": "^1.2.0",
     "prismjs": "^1.23.0",
     "process": "0.11.10",
-    "qrcode.react": "^1.0.1",
     "qs": "^6.9.4",
-    "query-string": "^7.1.1",
-    "randombytes": "^2.1.0",
-    "randomcolor": "^0.6.2",
     "react": "^17.0.2",
-    "react-apexcharts": "^1.3.7",
     "react-compound-timer": "^1.2.0",
     "react-confetti": "^6.0.0",
     "react-copy-to-clipboard": "^5.0.3",
@@ -167,18 +136,7 @@
     "react-dom": "^17.0.2",
     "react-draft-wysiwyg": "^1.14.6",
     "react-draggable": "^4.4.3",
-    "react-feather": "^2.0.8",
-    "react-file-reader": "^1.1.4",
-    "react-google-recaptcha": "^2.1.0",
-    "react-helmet": "^6.1.0",
-    "react-hook-form": "^6.15.5",
-    "react-hook-form-resolvers": "^0.0.1",
-    "react-horizontal-scrolling-menu": "^3.2.2",
-    "react-i18next": "^10.7.0",
-    "react-images": "^1.2.0-beta.6",
-    "react-infinite-scroller": "^1.2.6",
     "react-intersection-observer": "^8.32.0",
-    "react-intl": "^5.14.0",
     "react-is": "^17.0.2",
     "react-jdenticon": "^0.0.9",
     "react-loading": "^2.0.3",
@@ -197,20 +155,13 @@
     "react-swipeable-views": "^0.13.9",
     "react-syntax-highlighter": "^15.4.3",
     "react-text-mask": "^5.4.3",
-    "react-to-print": "^2.12.4",
     "react-transition-group": "4.4.1",
-    "react-use-clipboard": "^1.0.7",
-    "react-use-gesture": "^6.0.14",
     "react-virtualized-auto-sizer": "^1.0.2",
     "react-window": "^1.8.6",
-    "rebass": "^4.0.7",
     "redux": "^4.0.5",
     "redux-localstorage-simple": "^2.3.1",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
-    "remark-gfm": "^1.0.0",
-    "remarkable": "^2.0.1",
-    "remove-markdown": "^0.5.0",
     "serve": "^11.3.2",
     "sha224": "^1.0.0",
     "simple-cbor": "^0.4.1",
@@ -219,11 +170,8 @@
     "stream-browserify": "3.0.0",
     "styled-components": "^5.3.0",
     "stylis-plugin-rtl": "^2.0.2",
-    "tiny-invariant": "^1.1.0",
-    "tiny-warning": "^1.0.3",
     "toformat": "^2.0.0",
     "typescript": "4.2.3",
-    "use-count-up": "^2.2.5",
     "util": "0.12.3",
     "wcag-contrast": "^3.0.0",
     "workbox-core": "^6.1.0",
