--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "@babel/plugin-proposal-optional-chaining": "^7.20.7",
     "@babel/plugin-transform-exponentiation-operator": "^7.14.5",
+    "@types/lodash": "^4.14.191",
     "@types/qrcode.react": "^1.0.2",
     "@types/query-string": "^6.3.0",
     "@types/react-infinite-scroller": "^1.2.3",
@@ -23,162 +24,39 @@
     "@types/webpack-env": "^1.16.3",
     "chalk": "^4.1.2",
     "customize-cra": "^1.0.0",
-    "react-app-rewired": "^2.1.8",
-    "sass": "^1.32.11"
-  },
-  "dependencies": {
-    "@apollo/react-hooks": "^4.0.0",
-    "@auth0/auth0-spa-js": "^1.14.0",
-    "@date-io/date-fns": "1.x",
-    "@dfinity/agent": "0.14.1",
-    "@dfinity/auth-client": "0.14.1",
-    "@dfinity/authentication": "0.14.1",
-    "@dfinity/candid": "0.14.1",
-    "@dfinity/identity": "0.14.1",
-    "@dfinity/identity-ledgerhq": "0.14.1",
-    "@dfinity/principal": "0.14.1",
-    "@emotion/react": "^11.8.1",
-    "@emotion/style": "^0.8.0",
-    "@emotion/styled": "^11.3.0",
-    "@mdx-js/react": "^1.6.22",
-    "@mui/icons-material": "^5.4.2",
-    "@mui/lab": "^5.0.0-alpha.70",
-    "@mui/material": "^5.4.3",
-    "@mui/styles": "^5.4.2",
-    "@mui/x-date-pickers": "5.0.13",
-    "@popperjs/core": "^2.4.4",
-    "@reach/dialog": "^0.10.3",
-    "@reach/portal": "^0.10.3",
-    "@react-hook/media-query": "^1.1.1",
-    "@reduxjs/toolkit": "^1.6.0",
-    "@tabler/icons": "^1.39.1",
-    "@testing-library/jest-dom": "^5.11.10",
-    "@testing-library/react": "^11.2.6",
-    "@testing-library/user-event": "^12.8.3",
-    "@types/big.js": "^4.0.5",
-    "@types/jest": "^25.2.1",
-    "@types/luxon": "^1.24.4",
-    "@types/multicodec": "^1.0.0",
-    "@types/node": "^13.13.5",
-    "@types/qs": "^6.9.2",
-    "@types/react": "17.0.2",
-    "@types/react-dom": "17.0.2",
-    "@types/react-redux": "^7.1.8",
-    "@types/react-router-dom": "^5.0.0",
-    "@types/react-transition-group": "^4.4.1",
-    "@types/react-virtualized-auto-sizer": "^1.0.0",
-    "@types/react-window": "^1.8.2",
-    "@types/rebass": "^4.0.5",
-    "@types/styled-components": "^5.1.0",
-    "@types/testing-library__cypress": "^5.0.5",
-    "@types/wcag-contrast": "^3.0.0",
-    "ajv": "^6.12.3",
-    "apollo-boost": "^0.4.9",
-    "assert": "2.0.0",
-    "axios": "^0.21.1",
-    "base64-arraybuffer": "^0.2.0",
-    "bip39": "^3.0.4",
-    "buffer": "6.0.3",
-    "buffer-pipe": "^0.0.5",
-    "chance": "^1.1.7",
-    "cids": "1.0.0",
-    "core-js": "2",
-    "crc": "^3.8.0",
-    "cross-env": "^7.0.2",
-    "crypto": "^1.0.1",
-    "crypto-browserify": "^3.12.0",
-    "dayjs": "^1.10.5",
-    "draft-js": "^0.11.7",
     "eslint": "^7.29.0",
-    "eslint-config-airbnb": "^18.2.1",
-    "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-loader": "^4.0.2",
-    "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "events": "3.3.0",
-    "firebase": "^8.3.1",
-    "framer-motion": "^4.1.13",
-    "git-format-staged": "^2.1.1",
-    "google-protobuf": "^3.17.0",
-    "husky": "^6.0.0",
-    "inter-ui": "^3.13.1",
-    "iso-url": "^1.1.5",
-    "isomorphic-fetch": "^3.0.0",
-    "jazzicon": "^1.5.0",
-    "js-sha256": "^0.9.0",
-    "jsonwebtoken": "^8.5.1",
-    "jss-rtl": "^0.3.0",
-    "jwt-decode": "^3.1.2",
-    "lint-staged": ">=10",
+    "prettier": "^2.8.4",
+    "react-app-rewired": "^2.1.8",
+    "react-scripts": "4.0.3",
+    "@types/node": "^13.13.5",
+    "@types/react": "17.0.2",
+    "@types/react-dom": "17.0.2",
+    "@types/react-router-dom": "^5.0.0"
+  },
+  "dependencies": {
+    "@dfinity/agent": "0.14.1",
+    "@dfinity/candid": "0.14.1",
+    "@dfinity/identity": "0.14.1",
+    "@dfinity/principal": "0.14.1",
+    "@emotion/react": "^11.8.1",
+    "@emotion/styled": "^11.10.6",
+    "@mui/material": "^5.4.3",
+    "@mui/styles": "^5.4.2",
+    "assert": "2.0.0",
+    "buffer": "6.0.3",
+    "crypto-browserify": "^3.12.0",
     "lodash": "^4.17.21",
-    "lru-cache": "^6.0.0",
-    "luxon": "^1.25.0",
-    "multicodec": "^2.0.0",
-    "multihashes": "^3.0.1",
-    "node-inspect-extracted": "^1.0.7",
-    "node-vibrant": "^3.1.5",
-    "numbro": "^2.3.5",
-    "polished": "^3.3.2",
-    "prettier": "^2.3.1",
-    "pretty-quick": "^3.1.0",
-    "prism-react-renderer": "^1.2.0",
-    "prismjs": "^1.23.0",
     "process": "0.11.10",
-    "qs": "^6.9.4",
     "react": "^17.0.2",
-    "react-compound-timer": "^1.2.0",
-    "react-confetti": "^6.0.0",
-    "react-copy-to-clipboard": "^5.0.3",
-    "react-device-detect": "^1.17.0",
     "react-dom": "^17.0.2",
-    "react-draft-wysiwyg": "^1.14.6",
-    "react-draggable": "^4.4.3",
-    "react-intersection-observer": "^8.32.0",
-    "react-is": "^17.0.2",
-    "react-jdenticon": "^0.0.9",
-    "react-loading": "^2.0.3",
-    "react-markdown": "^6.0.0",
-    "react-material-ui-carousel": "^2.2.4",
-    "react-number-format": "4.9.1",
-    "react-perfect-scrollbar": "^1.5.8",
-    "react-popper": "^2.2.3",
-    "react-quill": "^1.3.5",
-    "react-redux": "^7.2.3",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^4.0.3",
-    "react-slick": "^0.28.1",
-    "react-spring": "^8.0.27",
-    "react-swipeable-views": "^0.13.9",
-    "react-syntax-highlighter": "^15.4.3",
-    "react-text-mask": "^5.4.3",
-    "react-transition-group": "4.4.1",
-    "react-virtualized-auto-sizer": "^1.0.2",
-    "react-window": "^1.8.6",
-    "redux": "^4.0.5",
-    "redux-localstorage-simple": "^2.3.1",
-    "redux-persist": "^6.0.0",
-    "redux-thunk": "^2.3.0",
-    "serve": "^11.3.2",
-    "sha224": "^1.0.0",
-    "simple-cbor": "^0.4.1",
-    "slick-carousel": "^1.8.1",
-    "start-server-and-test": "^1.11.0",
     "stream-browserify": "3.0.0",
-    "styled-components": "^5.3.0",
-    "stylis-plugin-rtl": "^2.0.2",
-    "toformat": "^2.0.0",
-    "typescript": "4.2.3",
-    "util": "0.12.3",
-    "wcag-contrast": "^3.0.0",
-    "workbox-core": "^6.1.0",
-    "workbox-expiration": "^6.1.0",
-    "workbox-precaching": "^6.1.0",
-    "workbox-routing": "^6.1.0",
-    "workbox-strategies": "^6.1.0"
+    "typescript": "4.2.3"
   },
   "browserslist": {
     "production": [
@@ -192,8 +70,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "lint-staged": {
-    "*.{js,ts,css,tsx,md,jsx}": "eslint --cache --fix"
   }
 }
