--- a/package.json
+++ b/package.json
@@ -16,11 +16,10 @@
     "@babel/plugin-proposal-optional-chaining": "^7.20.7",
     "@babel/plugin-transform-exponentiation-operator": "^7.14.5",
     "@types/lodash": "^4.14.191",
-    "@types/qrcode.react": "^1.0.2",
-    "@types/query-string": "^6.3.0",
-    "@types/react-infinite-scroller": "^1.2.3",
-    "@types/remarkable": "^2.0.3",
-    "@types/remove-markdown": "^0.3.1",
+    "@types/node": "^13.13.5",
+    "@types/react": "17.0.2",
+    "@types/react-dom": "17.0.2",
+    "@types/react-router-dom": "^5.0.0",
     "@types/webpack-env": "^1.16.3",
     "chalk": "^4.1.2",
     "customize-cra": "^1.0.0",
@@ -28,14 +27,9 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react": "^7.24.0",
-    "eslint-plugin-react-hooks": "^4.2.0",
     "prettier": "^2.8.4",
     "react-app-rewired": "^2.1.8",
-    "react-scripts": "4.0.3",
-    "@types/node": "^13.13.5",
-    "@types/react": "17.0.2",
-    "@types/react-dom": "17.0.2",
-    "@types/react-router-dom": "^5.0.0"
+    "react-scripts": "4.0.3"
   },
   "dependencies": {
     "@dfinity/agent": "0.14.1",
