--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "saga-interface",
   "version": "0.0.1",
   "scripts": {
-    "start": "react-app-rewired start",
-    "build": "react-app-rewired build",
-    "test": "react-app-rewired test",
+    "start": "react-scripts start",
+    "build": "GENERATE_SOURCEMAP=false react-scripts build",
+    "test": "react-scripts test",
     "lint": "eslint src --fix"
   },
   "resolutions": {
@@ -22,13 +22,11 @@
     "@types/react-router-dom": "^5.0.0",
     "@types/webpack-env": "^1.16.3",
     "chalk": "^4.1.2",
-    "customize-cra": "^1.0.0",
     "eslint": "^7.29.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react": "^7.24.0",
     "prettier": "^2.8.4",
-    "react-app-rewired": "^2.1.8",
     "react-scripts": "4.0.3"
   },
   "dependencies": {
